# NDKTest

./: build.gradle  gradle.properties  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/chinaso/ndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chinaso/ndktest/: DetectionBasedTracker.java  FdActivity.java  JNIUtils.java  MainActivity.java
app/src/main/java/com/chinaso/ndktest/dlib1/: AutoFitTextureView.java  CameraActivity.java  CameraConnectionFragment.java  FileUtils.java  FloatingCameraWindow.java  ImageUtils.java  OnGetImageListener.java  TrasparentTitleView.java
app/src/main/java/com/chinaso/ndktest/utils/: ScreenUtil.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  JNIHello.cpp  com_chinaso_ndktest_DetectionBasedTracker.cpp
app/src/main/jni/dlib/image_processing/: shape_predictor.h
app/src/main/jni/hello_dlib_header/: com_chinaso_ndktest_DetectionBasedTracker.h  detector.h
app/src/main/jni/jni_common/: Android.mk  jni_bitmap2mat.cpp  jni_bitmap2mat.h  jni_primitives.h  jni_utils.cpp  rgb2yuv.cpp  rgb2yuv.h  yuv2rgb.cpp
app/src/main/jni/jni_detections/: Android.mk  jni_face_det.cpp  jni_imageutils.cpp  jni_pedestrian_det.cpp
app/src/main/res/layout/: activity_camera.xml  activity_dlib.xml  activity_main.xml  fragment_camera.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/chinaso/ndktest/: ExampleUnitTest.java
dlib/src/main/java/com/tzutalin/dlib/: FaceDet.java  PedestrianDet.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary345/: build.gradle
